--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,42 @@
 .header {
     background-color: red;
+    margin: 0;
+    padding: 0;
+    justify-content: left;
 }
 
 .spiLogo {
     text-align: center;
+}
+
+body, ul {
+    margin: 0;
+    padding: 0;
+}
+
+.navbar {
+    list-style-type: none; 
+    display: flex; 
+    background-color: gray; 
+    justify-content: center; 
+    margin: 0;
+    padding: 0;
+    box-shadow: 1em;
+}
+
+.navbar li {
+    margin: 0 15px; 
+}
+
+.navbar a {
+    color: black; 
+    text-decoration: none; 
+    font-size: 18px;
+    padding: 14px 20px; 
+    display: block;
+}
+
+.navbar a:hover {
+    background-color: lightgray; 
+    color: black;
 }
